--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Le Scone</title>
 	<meta name="description" content="Le Scone - Restaurante">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
