--- a/index.html
+++ b/index.html
@@ -4,9 +4,95 @@
 	<title>Le Scone</title>
 	<meta name="description" content="Le Scone - Restaurante">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|PT+Mono" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <main class="container intro">
+    <div class="grid-5">
+      <img src="img/lescone.png" alt="Le Scone" class="logo">
+      <div class="intro-info">
+        <p>
+          De Seg. à Sab.<span class="open"></span><br>
+          das 07:00 às 18:00
+        </p>
 
+        <p>
+          Praia de Botafogo, 300<br>
+          Rio de Janeiro - RJ
+        </p>
+      </div>
+      <p class="intro-phone">+55 021 2412-3333</p>
+    </div>
+    <div class="grid-7">
+      <img src="img/foto.png" alt="Foto de Le Scone">
+    </div>
+  </main>
+
+  <section class="container">
+    <h1 class="grid-4 title">Menu</h1>
+    <div class="grid-7 offset-1">
+      <div class="menu-item">
+        <h2>Entradas</h2>
+        <ul>
+          <li><span>R$1,70</span>Ovos Mexidos</li>
+          <li><span>R$2,70</span>Scones de Frutas</li>
+          <li><span>R$3,70</span>Joelho de Queijo</li>
+          <li><span>R$4,70</span>Presunto Cozido</li>
+          <li><span>R$3,70</span>Coxinha de Frango</li>
+        </ul>
+      </div>
+
+      <div class="menu-item">
+        <h2>Pratos Principais</h2>
+        <ul>
+          <li><span>R$10,70</span>Penne com Queijo</li>
+          <li><span>R$22,70</span>Feijoada</li>
+          <li><span>R$33,70</span>Constela ao Molho</li>
+          <li><span>R$14,70</span>Medalhão de Frango</li>
+          <li><span>R$13,70</span>Coxinha de Frango</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="container contact">
+    <h1 class="grid-4 title">Contato</h1>
+    <div class="grid-7 offset-1">
+      <form>
+        <label for="name">Nome</label>
+        <input type="text" id="name">
+        <div class="row">
+          <div class="grid-7">
+            <label for="email">E-mail</label>
+            <input type="text" id="email">
+          </div>
+          <div class="grid-5">
+            <label for="phone">Telefone</label>
+            <input type="text" id="phone">
+          </div>
+        </div>
+        <label for="message">Mensagem</label>
+        <textarea id="message"></textarea>
+        <input type="button" class="button" value="Enviar">
+      </form>
+      <div class="contact-info">
+        <p>contato@lescone.com</p>
+        <p>+55 021 2412-3333</p>
+      </div>
+      <a href="#" class="contact-map">
+        <img src="img/map.png" alt="Como chegar em Le Scone">
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>Le Scone © 1989 - 2016. Alguns direitos reservados.</p>
+      <a href="#" target="_blank">
+        <img src="img/lescone-icone.png" alt="Le Scone Icone">
+      </a>
+    </div>
+  </footer>
 </body>
 </html>
