--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     </div>
   </main>
 
-  <section class="container">
+  <section class="container menu">
     <h1 class="grid-4 title">Menu</h1>
     <div class="grid-7 offset-1">
       <div class="menu-item">
+        <img src="img/prato-1.png" alt="Foto Prato 1">
         <h2>Entradas</h2>
         <ul>
           <li><span>R$1,70</span>Ovos Mexidos</li>
@@ -44,6 +45,7 @@
       </div>
 
       <div class="menu-item">
+        <img src="img/prato-2.png" alt="Foto Prato 2">
         <h2>Pratos Principais</h2>
         <ul>
           <li><span>R$10,70</span>Penne com Queijo</li>
