Implement footer part
https://www.origamid.com/curso/css-com-sass/4-12-rodape

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <p>Le Scone © 1989 - 2016. Alguns direitos reservados.</p>
       <a href="#" target="_blank">
