Style intro component

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,13 +12,13 @@
     <div class="l-grid-5">
       <img src="img/lescone.png" alt="Le Scone" class="intro__logo">
       <div class="intro__info">
-        <p>
+        <p class="intro__schedule">
           De Seg. à Sab.
-          <span class="intro__status intro__status--open"></span><br>
+          <span class="intro__status intro__status--open" title="Open"></span><br>
           das 07:00 às 18:00
         </p>
 
-        <p>
+        <p class="intro__address">
           Praia de Botafogo, 300<br>
           Rio de Janeiro - RJ
         </p>
