Refactor contact component

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -26,7 +26,7 @@
       <p class="intro__phone">+55 021 2412-3333</p>
     </div>
     <div class="l-grid-7">
-      <img class="intro__photo" src="img/foto.png" alt="Foto de Le Scone">
+      <img class="intro__photo framed" src="img/foto.png" alt="Foto de Le Scone">
     </div>
   </main>
 
@@ -114,7 +114,7 @@
         <p>+55 021 2412-3333</p>
       </div>
       <a href="#" class="contact__map">
-        <img src="img/map.png" alt="Como chegar em Le Scone">
+        <img class="framed framed--hoverable" src="img/map.png" alt="Como chegar em Le Scone">
       </a>
     </div>
   </section>
