Refactor menu component

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -34,57 +34,27 @@
     <h1 class="l-grid-4 section-title">Menu</h1>
     <div class="l-grid-7 l-offset-1">
       <div class="menu__item">
-        <h2 class="menu__item-title">Entradas</h2>
+        <h2 class="menu__title">Entradas</h2>
         <ul class="menu__list">
-          <li class="menu__list-item">
-            <span class="menu__price">R$1,70</span>
-            Ovos Mexidos
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$2,70</span>
-            Scones de Frutas
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$3,70</span>
-            Joelho de Queijo
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$4,70</span>
-            Presunto Cozido
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$3,70</span>
-            Coxinha de Frango
-          </li>
+          <li><span class="menu__price">R$1,70</span>Ovos Mexidos</li>
+          <li><span class="menu__price">R$2,70</span>Scones de Frutas</li>
+          <li><span class="menu__price">R$3,70</span>Joelho de Queijo</li>
+          <li><span class="menu__price">R$4,70</span>Presunto Cozido</li>
+          <li><span class="menu__price">R$3,70</span>Coxinha de Frango</li>
         </ul>
-        <img class="menu__photo" src="img/prato-1.png" alt="Foto Prato 1">
+        <img class="menu__photo framed" src="img/prato-1.png" alt="Foto Prato 1">
       </div>
 
       <div class="menu__item">
-        <h2 class="menu__item-title">Pratos Principais</h2>
+        <h2 class="menu__title">Pratos Principais</h2>
         <ul class="menu__list">
-          <li class="menu__list-item">
-            <span class="menu__price">R$10,70</span>
-            Penne com Queijo
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$22,70</span>
-            Feijoada
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$33,70</span>
-            Constela ao Molho
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$14,70</span>
-            Medalhão de Frango
-          </li>
-          <li class="menu__list-item">
-            <span class="menu__price">R$13,70</span>
-            Coxinha de Frango
-          </li>
+          <li><span class="menu__price">R$10,70</span>Penne com Queijo</li>
+          <li><span class="menu__price">R$22,70</span>Feijoada</li>
+          <li><span class="menu__price">R$33,70</span>Constela ao Molho</li>
+          <li><span class="menu__price">R$14,70</span>Medalhão de Frango</li>
+          <li><span class="menu__price">R$13,70</span>Coxinha de Frango</li>
         </ul>
-        <img class="menu__photo" src="img/prato-2.png" alt="Foto Prato 2">
+        <img class="menu__photo framed" src="img/prato-2.png" alt="Foto Prato 2">
       </div>
     </div>
   </section>
