Update files to include javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="intro__info">
         <p class="intro__schedule">
           De Seg. à Sab.
-          <span class="intro__status intro__status--open" title="Open"></span><br>
+          <span class="intro__status js-intro__status"></span><br>
           das 07:00 às 18:00
         </p>
 
@@ -99,5 +99,7 @@
       </a>
     </div>
   </footer>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
