Optimize images keeping originals

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -26,7 +26,7 @@
       <p class="intro__phone">+55 021 2412-3333</p>
     </div>
     <div class="l-grid-7">
-      <img class="intro__photo framed" src="img/foto.png" alt="Foto de Le Scone">
+      <img class="intro__photo framed" src="img/foto.jpg" alt="Foto de Le Scone">
     </div>
   </main>
 
@@ -42,7 +42,7 @@
           <li><span class="menu__price">R$4,70</span>Presunto Cozido</li>
           <li><span class="menu__price">R$3,70</span>Coxinha de Frango</li>
         </ul>
-        <img class="menu__photo framed" src="img/prato-1.png" alt="Foto Prato 1">
+        <img class="menu__photo framed" src="img/prato-1.jpg" alt="Foto Prato 1">
       </div>
 
       <div class="menu__item">
@@ -54,7 +54,7 @@
           <li><span class="menu__price">R$14,70</span>Medalhão de Frango</li>
           <li><span class="menu__price">R$13,70</span>Coxinha de Frango</li>
         </ul>
-        <img class="menu__photo framed" src="img/prato-2.png" alt="Foto Prato 2">
+        <img class="menu__photo framed" src="img/prato-2.jpg" alt="Foto Prato 2">
       </div>
     </div>
   </section>
@@ -84,7 +84,7 @@
         <p>+55 021 2412-3333</p>
       </div>
       <a href="#" class="contact__map">
-        <img class="framed framed--hoverable" src="img/map.png" alt="Como chegar em Le Scone">
+        <img class="framed framed--hoverable" src="img/map.jpg" alt="Como chegar em Le Scone">
       </a>
     </div>
   </section>
